samples/good/Imports/aml-03-single-dot-path/imports.mf
<imports>
  <package name="com.aras.innovator.admin" path=".\" />
</imports>
