samples/bad/imports-root-invalid/imports.mf
<AML>
  <package name="Sample" path="." />
</AML>
